@@ -84,6 +84,8 @@ class SLBinary(sqltypes.Binary):
 class SLBoolean(sqltypes.Boolean):
     def get_col_spec(self):
         return "BOOLEAN"
+    def convert_bind_param(self, value, dialect):
+        return value and 1 or 0
     def convert_result_value(self, value, dialect):
         if value is None:
             return None
